seedboxk8s/applications/opensearch/IngressRoute.opensearch-dashboards.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensearch-dashboards
  namespace: opensearch
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: OpenSearch
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: opensearch
    gethomepage.dev/href: https://opensearch.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`opensearch.${productionClusterFqdn}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: opensearch-dashboards
          kind: Service
          port: 5601
  tls:
    secretName: seedbox-wildcard-backing-secret
