seedboxk8s/applications/opensearch/NetworkPolicy.allow-traefik-to-opensearch-dashboards.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-opensearch-dashboards
  namespace: opensearch
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opensearch-dashboards
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
